deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels: # labels to select/identify the deployment
        app: example-app
    spec:
      containers:
      - name: example-app
        image: gcr.io/PROJECT_ID/IMAGE:TAG
        ports:
        - containerPort: 3000
          protocol: TCP
