service.yaml
kind: Service
apiVersion: v1
metadata:
  name: the-service
spec:
  replicas: 2
  selector:
    deployment: example-app
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
